--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,55 @@
-div .img{
-    display: flex;
-    justify-content: center;
-
+.text{
+    font-family: Marvel;
+    font-size: 1.7rem;
 }
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgba(33,37,41,255);
+    color: #fff;
+    padding: 20px;
+    position: sticky;
+  }
+  
+  .logo a {
+    color: #fff;
+    font-size: 1.5rem;
+    font-weight: bold;
+    text-decoration: none;
+  }
+  
+  .menu {
+    display: flex;
+    justify-content: flex-end;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .menu li {
+    margin-left: 20px;
+  }
+  
+  .menu li:first-child {
+    margin-left: 0;
+  }
+  
+  .menu li a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.7rem;
+  }
+  
+  @media screen and (max-width: 768px) {
+    .menu {
+      justify-content: space-between;
+      align-items: flex-end;
+    }
+  
+    .menu li a {
+      font-size: 1rem;
+    }
+  }
+  
