--- a/src/components/Personajes/Personajes.css
+++ b/src/components/Personajes/Personajes.css
@@ -1,3 +1,16 @@
+
+h3 {
+    text-align: center;
+    font-size: 2em;
+    margin: 0.5em 0;
+    font-weight: 900;
+}
+
+@media (max-width: 767px) {
+    h3 {
+        font-size: 1.6em;
+    }
+}
 .Main{
     width: 100%;
     display: flex;
@@ -41,17 +54,15 @@
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    /* background-color: white; */
 }
 .Main .personajes .infoCard{
-    display: flex;
+    display: table-row;
     width: 390px;
     align-items: center;
-    margin: 20px;    
-    /* background-color: red;    */
+    margin: 20px;
 }
 .Main .personajes .infoCard img{
-    width: 30%; 
+    width: 60%; 
 }
 .Main .personajes .informacion{
     display: flex;
